# rustick

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: release.yml  rust.yml
.github/workflows/: release.yml  rust.yml
dmsrc/: main.dm
scripts/: strip-debug-wrapper-i686.sh  strip-debug-wrapper-x86_64.sh  strip-debug.sh
src/: byondtimers.rs  core.rs  lib.rs  realtimers.rs  tests.rs  timer.rs
