[package]
name = "rustick"
version = "0.7.0"
edition = "2024"
authors = [
    "ZeWaka <zewakagamer@gmail.com>",               # Maintainer
    "vuonojenmustaturska <naksu@youzen.ext.b2.fi>", # Original author
    "rustick contributors",
]
repository = "https://github.com/goonstation/rustick"
license = "MIT"
description = "timers for the Goonstation Space Station 13 codebase using byondapi"
rust-version = "1.94" # Mar 2026

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[dependencies]
meowtonin = { version = "0.3.1", features = ["fast-typechecking"] }
hierarchical_hash_wheel_timer = "1.4.0"
uuid = { version = "1.23.1", features = ["v8"] }
crossbeam-channel = "0.5.15"
rand = "0.10.1"

[features]
allow_non_32bit = []
